k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: log4j-demo
  labels:
    name: log4j-demo
    app: log4j-web
    environment: production
