k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log4j-app-service
  namespace: log4j-demo
  labels:
    app: log4j-web
spec:
  type: ClusterIP # 클러스터 내부 통신용
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: log4j-web

---
# NodePort 서비스 (외부 접근용 - 로컬 테스트용)
apiVersion: v1
kind: Service
metadata:
  name: log4j-app-nodeport
  namespace: log4j-demo
  labels:
    app: log4j-web
    service-type: nodeport
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080 # 30080 포트로 외부 접근
      protocol: TCP
      name: http
  selector:
    app: log4j-web
